Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
Description
ROS version tested: 0.4.15-dev-3255-g048f2b8
Steps to reproduce the issue:
1. After installing reactos, go to My PC.
2. Drag the C: unit icon with the right button of the mouse. Then drop it in any folder or in the desktop.
3. Click the "Create shortcut" option.
Expected behavior: A shortcut should be created in the dropped directory.
Real behavior: The shortcut is created in the root of the origin of the .ink file, in this case, C:
Attachments
Issue Links
- relates to
-
CORE-17871 A shortcut is not created for any disk in the root of another disk and directories
-
- Resolved
-